[tool.poetry]
name = "flet-contrib"
version = "0.1.0"
description = "Flet controls by the community"
authors = ["Appveyor Systems Inc. <hello@flet.dev>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "flet_contrib"}]

[tool.poetry.dependencies]
python = "^3.8"
flet-core = "^0"
# flet-core = { path = "../flet/sdk/python/packages/flet-core", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flet = "^0"
# flet = { path = "../flet/sdk/python/packages/flet", develop = true }
# flet-runtime = { path = "../flet/sdk/python/packages/flet-runtime", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
